--- a/src/app/administrator/administrator.component.html
+++ b/src/app/administrator/administrator.component.html
@@ -80,7 +80,7 @@
                     <div class="ui-toolbar-group-left" style="position:absolute;top:5%;left: 40px"><a>{{all_sheet_name[i]}}</a></div>
                     <div class="ui-toolbar-group-right" style="position:absolute;top:5%;right:10px">
                         <button pButton type="button" label="Importer la table" icon="pi pi-upload"
-                                class="ui-button-success" (click)="saveRefTable(i)"></button>
+                                class="ui-button-success" (click)="saveRefTable(alltable[i])"></button>
                     </div>
                 </p-header>
 
