--- a/src/app/administrator/administrator.component.html
+++ b/src/app/administrator/administrator.component.html
@@ -67,7 +67,7 @@
                 </p-fileUpload>
 
                 <button pButton type="button" label="Importer toutes les tables" icon="pi pi-upload"
-                        class="ui-button-success" (click)="saveRefTable($event)"></button>
+                        class="ui-button-success" (click)="saveRefTable(alltable, true)"></button>
             </div>
         </p-toolbar>
         <br>
@@ -80,7 +80,7 @@
                     <div class="ui-toolbar-group-left" style="position:absolute;top:5%;left: 40px"><a>{{all_sheet_name[i]}}</a></div>
                     <div class="ui-toolbar-group-right" style="position:absolute;top:5%;right:10px">
                         <button pButton type="button" label="Importer la table" icon="pi pi-upload"
-                                class="ui-button-success" (click)="saveRefTable(alltable[i])"></button>
+                                class="ui-button-success" (click)="saveRefTable(alltable[i],false)"></button>
                     </div>
                 </p-header>
 
