--- a/src/app/component/prestations/prestations.component.html
+++ b/src/app/component/prestations/prestations.component.html
@@ -50,7 +50,7 @@
 
             <!-- DataRows -->
             <td *ngFor="let col of columns"  >
-                <!--<a *ngSwitchCase="'prestIdPilote'" routerLink="/prestations/collab/{{rowData['collaborateur'].id}}">{{rowData['collaborateur'].trigOpen}}</a>-->
+                <!--<a *ngSwitchCase="'prestIdPilote'" routerLink="/prestations/collab/{{rowData['collaborateur'].id}}">{{rowData['collaborateur'].trigramme}}</a>-->
                 <span >{{rowData[col.field]}}</span>
             </td>
 
